Add test for osm query tool
Closes https://github.com/BesutKode/uni-tantangan-khusus-Arsfiqball/issues/1

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_script:
   - npm install -g jshint
 script:
   - jshint .
+  - query="http://overpass-api.de/api/interpreter?data=$(<test/kalimantan.osm-q.txt)"
+  - wget -O test/kalimantan.osm.json "$query"
+  - npm test
