--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DataCredits for Contributions to Kalimantan Open Data",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "ava"
   },
   "keywords": [
     "kalimantan",
@@ -23,7 +23,6 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "ava": "^0.20.0"
   }
 }
