Fix codecov scanning report: X Failed to read file
Fixes https://github.com/BesutKode/uni-tantangan-khusus-Arsfiqball/issues/4

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
   - query="http://overpass-api.de/api/interpreter?data=$(<test/kalimantan.osm-q.txt)"
   - wget -O test/kalimantan.osm.json "$query"
   - npm test
-  - codecov
+  - npm run report-coverage
+  - codecov -t ${CODECOV_TOKEN}
